# Upstage_team3_deep_research

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
dev_test/: ko-freshqa-dev.ipynb
evaluation/: eval.ipynb  eval_graph.py  eval_prompt.py  eval_tools.py  gold_set_evaluation.py  impact_evidence_faithfulness.py  policy_attribution_consistency.py
src/deep_research/: lite_researcher.py  multi_agent_supervisor.py  prompts.py  research_agent.py  research_agent_full.py  research_agent_scope.py  router.py  state_scope.py  utils.py
