[project]
name = "deep_research"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "langgraph>=1.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.3.0,<0.4.0",
    "langchain-upstage>=0.7.4",
    "langchain_community>=0.2,<0.4",
    "langchain_tavily>=0.2.12",
    "langchain_mcp_adapters>=0.1.11",
    "pydantic>=2.0.0",
    "rich>=14.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.20.0",
    "tavily-python>=0.5.0",
    "fastapi>=0.121.2",
    "uvicorn>=0.35.0",
    "starlette>=0.47.2",
    "sse-starlette>=2.4.1",
    "python-dotenv>=1.1.1",
    "pydantic-settings>=2.10.1",
    "pandas>=2.3.3",
    "duckduckgo-search>=8.1.1",
    "googlesearch-python>=1.3.0",
    "requests>=2.32.5",
    "beautifulsoup4>=4.13.4",
    "playwright>=1.56.0",
    "wikipedia-api>=0.8.1",
    "google-genai>=1.52.0",
    "langchain-google-genai>=2.1.12",
    "matplotlib>=3.10.7",
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["deep_research"]

[tool.setuptools.package-dir]
"deep_research" = "src/deep_research"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    "UP035",
    "D417",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"
